Increased margin on about duplicate page; fixed nav issue with only partical colour shift on hover

--- a/scss/_about_workingcopy.scss
+++ b/scss/_about_workingcopy.scss
@@ -1,6 +1,6 @@
 .course-overview {
     border: 1px solid black;
-    margin: 20px 30px;
+    margin: 20px 40px;
     padding: 5px 20px;
 
     p {
@@ -15,7 +15,7 @@
 
 .comp1950-course-details {
     border: 1px solid black;
-    margin: 20px 30px;
+    margin: 20px 40px;
 
     display: grid;
     grid-template-areas:
